# blockchain

./: Cargo.toml  README.md
blockchain/: Cargo.toml
blockchain/src/: block.rs  blockchain.rs  core.rs  crypto.rs  lib.rs  transaction.rs
blockchain/src/blockchain/: utxo_set.rs
blockchain/src/core/: script.rs
blockchain/src/data/: storage.rs
cli/: Cargo.toml
node/: Cargo.toml  peers.json
node/data/: db
node/src/: api.rs  broadcast.rs  main.rs
node/src/api/: blockchain.rs  peers.rs  types.rs
rust_word_counter/: Cargo.toml  input.txt
rust_word_counter/src/: main.rs
wallet/: Cargo.toml
wallet-crypto/: Cargo.toml
wallet-crypto/src/: crypto.rs  keys.rs  lib.rs  scripts.rs  transaction.rs
wallet-crypto/src/keys/: blockchain_hash.rs  public_key_hash.rs  serialization.rs  signature.rs
wallet-ui/: .gitignore  .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml
wallet-ui/apps/app/: index.html  package.json  tailwind.config.js
wallet-ui/apps/app/src/: Addresses.tsx  App.tsx  Balance.tsx  SendBlock.tsx  main.tsx
wallet-ui/apps/app/src/data/: addresses.ts  balance.ts
wallet-ui/wallet-app/: package.json  stencil.config.ts
wallet-ui/wallet-app/src/components/app-home/: app-home.tsx
wallet-ui/wallet-web/: Cargo.toml  package.json
wallet-ui/wallet-web/src/: api.rs  lib.rs
wallet-web/: Cargo.toml  README.md  index.html  style.css
wallet-web/src/: crypto.rs  lib.rs  storage.rs
wallet/src/: lib.rs  wallet.rs
