[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
wallet = { path = "../wallet" }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
bincode = { version = "2.0.1", features = ["serde"] }
