[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
bincode = { version = "2.0.1", features = ["serde"] }
async-trait = "0.1.88"
rand = "0.8"
k256 = {version = "0.13.4", features = ["ecdsa", "pkcs8"] }
ripemd = "0.1.3"
thiserror = "2.0.12"
futures = "0.3.31"
