[package]
name = "wallet-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
ripemd = "0.1.3"
sha2 = "0.10"
k256 = {version = "0.13.4", features = ["ecdsa", "pkcs8"] }
rand = "0.8"
thiserror = "2.0.12"
