[package]
name = "wallet-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wallet-crypto = { path = "../../wallet-crypto" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "console", "Crypto", "SubtleCrypto", "CryptoKey", "DomStringList", 
    'IdbFactory', 'IdbOpenDbRequest', 'IdbVersionChangeEvent',
    'IdbDatabase', 'IdbObjectStore', 'IdbTransaction', 'IdbRequest', 'IdbKeyRange', 'IdbObjectStoreParameters', 'IdbTransactionMode'] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.34"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4.3"
gloo-console = "0.3"
indexed_db_futures = { version = "0.6.4", features = ["cursors", "streams"]}